--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<title>NW3DPrinting, LLC</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta property="og:title" content="NW3DPrinting – Milwaukee Packout Accessories">
+<meta property="og:description" content="3D printed accessories and custom parts. Designed and manufactured in the USA with lifetime warranty.">
+<meta property="og:url" content="https://nw3d.com/">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://nw3d.com/Front1.jpg">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="icon" href="/NW3D_logo.png" type="image/png">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 
 <style>
