Add title to index.html for SEO enhancement

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
+<title>NW3DPrinting – Milwaukee Packout Accessories & Custom 3D Printed Parts</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta property="og:title" content="NW3DPrinting – Milwaukee Packout Accessories">
 <meta property="og:description" content="3D printed accessories and custom parts. Designed and manufactured in the USA with lifetime warranty.">
