--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta property="og:description" content="3D printed accessories and custom parts. Designed and manufactured in the USA with lifetime warranty.">
 <meta property="og:url" content="https://nw3d.com/">
 <meta property="og:type" content="website">
-<meta property="og:image" content="https://nw3d.com/Front1.jpg">
+<meta property="og:image" content="https://nw3d.com/ogpreview.png">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
